--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -3,7 +3,20 @@
   position:fixed;
   top:0%;
   left:0%;
+  bottom:0%;
+  right:0%;
   width:100%;
+  height:100%;
+}
+
+#game
+{
+  position:fixed;
+  top:0%;
+  left:0%;
+  bottom:0%;
+  right:0%;
+  width:80%;
   height:100%;
   background:#000000;
 }
